--- a/ceramics.html
+++ b/ceramics.html
@@ -11,28 +11,28 @@
 </head>
 <body>
 
-    <h1>| &nbsp  ceramics  &nbsp |</h1>
+    <h1>|  &nbsp  ceramics  &nbsp  |</h1>
 
 <div class="container-fluid art_pages">
     <div class="row row1">
         <div class="col-md-4 container" id="photography">
             <img src="img/ceramics/crackle.JPG" alt="" class="image" >
             <div class="overlay">
-                <div class="text"> |  crackle | </div>
+                <div class="text">    crackle   </div>
             </div>
         </div>
 
         <div class="col-md-4 container" id="photography">
                 <img src="img/ceramics/orchid.jpg" alt="" class="image" >
                 <div class="overlay">
-                    <div class="text"> |  orchid  | </div>
+                    <div class="text">    orchid    </div>
                 </div>
             </div>
 
         <div class="col-md-4 container" id="photography">
             <img src="img/ceramics/galaxy.JPG" alt="" class="image" >
             <div class="overlay">
-                <div class="text"> |  galaxy  | </div>
+                <div class="text">    galaxy    </div>
             </div>
         </div>
 
@@ -46,21 +46,21 @@
             <div class="col-md-4 container" id="photography">
                 <img src="img/ceramics/mug.jpg" alt="" class="image" >
                 <div class="overlay">
-                    <div class="text"> |  triangle  | </div>
+                    <div class="text">    triangle    </div>
                 </div>
             </div>
 
            <div class="col-md-4 container" id="photography">
                 <img src="img/ceramics/succulent.jpg" alt="" class="image" >
                 <div class="overlay">
-                    <div class="text"> |  succulent | </div>
+                    <div class="text">    succulent   </div>
                 </div>
             </div>
 
             <div class="col-md-4 container" id="photography">
             <img src="img/ceramics/ramen.JPG" alt="" class="image" >
             <div class="overlay">
-                <div class="text"> |  flecks  | </div>
+                <div class="text">    flecks    </div>
             </div>
         </div>
 
@@ -73,14 +73,14 @@
 <div class="col-md-4 container" id="photography">
             <img src="img/ceramics/sediment.JPG" alt="" class="image" >
             <div class="overlay">
-                <div class="text"> |  sediment | </div>
+                <div class="text">    sediment   </div>
             </div>
         </div>
 
             <div class="col-md-4 container" id="photography">
             <img src="img/ceramics/bubble.jpg" alt="" class="image" >
             <div class="overlay">
-                <div class="text"> |  bubble  | </div>
+                <div class="text">    bubble    </div>
             </div>
             </div>
 
@@ -88,7 +88,7 @@
         <div class="col-md-4 container" id="photography">
             <img src="img/ceramics/pumpkin.JPG" alt="" class="image" >
             <div class="overlay">
-                <div class="text"> |  pumpkin  | </div>
+                <div class="text">    pumpkin    </div>
             </div>
         </div>
 
