--- a/paintings.html
+++ b/paintings.html
@@ -24,21 +24,21 @@
       <div class="col-md-3 container" id="photography">
         <img src="img/paintings/seaweed.jpg" alt="" class="image">
         <div class="overlay">
-          <div class="text"> | seaweed | </div>
+          <div class="text">seaweed</div>
         </div>
       </div>
 
       <div class="col-md-6 container" id="photography">
         <img src="img/paintings/andromeda.jpg" alt="" class="image" width="600px">
         <div class="overlay">
-          <div class="text"> | andromeda | </div>
+          <div class="text">andromeda</div>
         </div>
       </div>
 
       <div class="col-md-3 container" id="photography">
         <img src="img/paintings/fire.JPG" alt="" class="image">
         <div class="overlay">
-          <div class="text"> | pause | </div>
+          <div class="text">pause</div>
         </div>
       </div>
 
