--- a/photography.html
+++ b/photography.html
@@ -13,7 +13,7 @@
 
 <body>
 
-  <h1>| &nbsp photography &nbsp |</h1>
+  <h1>|  &nbsp photography &nbsp  |</h1>
 
   <div class="container-fluid art_pages">
 
@@ -21,14 +21,14 @@
       <div class="col-md-6 container" id="photography">
         <img src="img/photos/door.jpg" alt="an orange door with a black and white border" class="image">
         <div class="overlay">
-          <div class="text"> | accra | ghana | <br> | 2012 | </div>
+          <div class="text">   accra   ghana   <br>   2012   </div>
         </div>
       </div>
 
       <div class="col-md-6 container" id="photography">
         <img src="img/photos/wonderwheel.jpg" alt="a widescreen view of a carnival next to the ocean" class="image">
         <div class="overlay">
-          <div class="text"> | coney island | new york | <br> | 2016 | </div>
+          <div class="text">   coney island   new york   <br>   2016   </div>
         </div>
       </div>
 
@@ -41,21 +41,21 @@
       <div class="col-md-3 container" id="photography">
         <img src="img/photos/tortie.jpg" alt="a tortoiseshell cat with a blue background" class="image">
         <div class="overlay">
-          <div class="text"> | somerville | <br> | massachusetts | <br> | 2016 | </div>
+          <div class="text">   somerville   <br>   massachusetts   <br>   2016   </div>
         </div>
       </div>
 
       <div class="col-md-3 container" id="photography">
         <img src="img/photos/man.jpg" alt="a black and white photo of a man standing in a rocky landscape" class="image">
         <div class="overlay">
-          <div class="text"> | savai'i | <br> | samoa | <br> | 2017 | </div>
+          <div class="text">   savai'i   <br>   samoa   <br>   2017   </div>
         </div>
       </div>
 
       <div class="col-md-3 container" id="photography">
         <img src="img/photos/street.jpg" alt="a colorful street" class="image">
         <div class="overlay">
-          <div class="text"> | toulouse | <br> | france | <br> | 2018 | </div>
+          <div class="text">   toulouse   <br>   france   <br>   2018   </div>
         </div>
       </div>
 
@@ -63,7 +63,7 @@
       <div class="col-md-3 container" id="photography">
         <img src="img/photos/shoes.jpg" alt="a pair of shoes in the sand" class="image">
         <div class="overlay">
-          <div class="text"> | monterey | <br> | california | <br> | 2017 | </div>
+          <div class="text">   monterey   <br>   california   <br>   2017   </div>
         </div>
       </div>
 
@@ -72,14 +72,14 @@
         <div class="col-md-3 container" id="photography">
           <img src="img/bridge_crop.jpg" alt="a black and white photo of a bridge" class="image">
           <div class="overlay">
-            <div class="text"> | new orleans | <br> | louisiana | <br> | 2016 | </div>
+            <div class="text">   new orleans   <br>   louisiana   <br>   2016   </div>
           </div>
         </div>
 
         <div class="col-md-3 container" id="photography">
           <img src="img/photos/candles.jpg" alt="set of candles in blue containers" class="image">
           <div class="overlay">
-            <div class="text"> | new hampshire | <br> | 2017 | </div>
+            <div class="text">   new hampshire   <br>   2017   </div>
           </div>
         </div>
 
@@ -87,14 +87,14 @@
         <div class="col-md-3 container" id="photography">
           <img src="img/photos/fan.jpg" alt="a blue fan reflected in the water" class="image">
           <div class="overlay">
-            <div class="text"> | new york | <br> | new york | <br> | 2015 | </div>
+            <div class="text">   new york   <br>   new york   <br>   2015   </div>
           </div>
         </div>
 
         <div class="col-md-3 container" id="photography">
           <img src="img/photos/coffee.jpg" alt="a black and white picture of a coffee shop sign" class="image">
           <div class="overlay">
-            <div class="text"> | new york | <br> | new york | <br> | 2015 | </div>
+            <div class="text">   new york   <br>   new york   <br>   2015   </div>
           </div>
         </div>
 
@@ -102,21 +102,21 @@
           <div class="col-md-3 container" id="photography">
             <img src="img/photos/waterdoor.jpg" alt="a door and its reflection in a canal" class="image">
             <div class="overlay">
-              <div class="text"> | annecy | <br> | france | <br> | 2013 | </div>
+              <div class="text">   annecy   <br>   france   <br>   2013   </div>
             </div>
           </div>
 
           <div class="col-md-3 container" id="photography">
             <img src="img/photos/graffitti.jpg" alt="an alleyway with brightly coloured graffiti" class="image">
             <div class="overlay">
-              <div class="text"> | cambridge | <br> | massachusetts | <br> | 2014 | </div>
+              <div class="text">   cambridge   <br>   massachusetts   <br>   2014   </div>
             </div>
           </div>
 
           <div class="col-md-3 container" id="photography">
             <img src="img/photos/elephant2.jpg" alt="a yellow carving of an elephant" class="image">
             <div class="overlay">
-              <div class="text"> | jaipur | <br> | india | <br> | 2012 | </div>
+              <div class="text">   jaipur   <br>   india   <br>   2012   </div>
             </div>
           </div>
 
@@ -124,7 +124,7 @@
           <div class="col-md-3 container" id="photography">
             <img src="img/photos/cat.jpg" alt="a cat sleeping on a blue stool" class="image">
             <div class="overlay">
-              <div class="text"> | punta mona | <br> | costa rica | <br> | 2016 | </div>
+              <div class="text">   punta mona   <br>   costa rica   <br>   2016   </div>
             </div>
           </div>
 
@@ -133,7 +133,7 @@
             <div class="col-md-6 container" id="photography">
               <img src="img/photos/beach.JPG" alt="a widescreen stormy beach with a hut" class="image">
               <div class="overlay">
-                <div class="text"> | namua | samoa | <br> | 2017 | </div>
+                <div class="text">   namua   samoa   <br>   2017   </div>
               </div>
             </div>
 
@@ -141,7 +141,7 @@
             <div class="col-md-6 container" id="photography">
               <img src="img/photos/decay.JPG" alt="a rusting piece of metal with the ocean in the background" class="image">
               <div class="overlay">
-                <div class="text"> | san salvador | bahamas | <br> | 2015 | </div>
+                <div class="text">   san salvador   bahamas   <br>   2015   </div>
               </div>
             </div>
           </div>
