--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Portfolio</title>
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
-    <script src="https://unpkg.com/feather-icons"></script>
+  <script src="https://unpkg.com/feather-icons"></script>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -22,70 +22,74 @@
     <div class="row">
       <div class="col-md"></div>
       <div class="col-md-4 container" id="thesis">
-          <a href="https://automating.nyc"><img src="img/thesis_crop.png" alt="a screenshot of a body of text which says 'can I play with an algorithm'" class="image">
+        <a href="https://automating.nyc"><img src="img/thesis_crop.png" alt="a screenshot of a body of text which says 'can I play with an algorithm'" class="image">
           <div class="overlay">
-              <div class="text"> | thesis | </div>
-          </a>
-        </div>
-        </div>
-
-        <div class="col-md-4 container" id="codeEnforcement">
-            <a href="codeEnforcement.html"><img src="img/chris_crop.png" alt="a screenshot of a body of text with the City of Boston logo in the top right'" class="image">
-            <div class="overlay">
-                <div class="text"> | redesigning the UX of tickets | </div>
-            </a>
-            </div>
-          </div>
-        </div>
-
-
-        <div class="row">
-          <div class="col-md"></div>
-
-          <div class="col-md-4 container" id="openMRS">
-              <a href="openMRS.html"><img src="img/openMRSscreenshot_crop.png" alt="a screenshot of webpage which says 'OpenMRS'" class="image">
-              <div class="overlay">
-                  <div class="text"> | opening open source | </div>
-              </a>
-              </div>
-            </div>
-
-          <div class="col-md-4 container" id="photography">
-            <a href="photography.html"><img src="img/bridge_crop.jpg" alt="a black and white photo of a bridge" class="image">
-              <div class="overlay">
-                <div class="text"> | photography | </div>
-            </a>
-          </div>
-          </div>
-            <div class="col-md"></div>
-        </div>
-
-    <div class="row ">
-        <div class="col-md"></div>
-      <div class="col-md-4 container" id="ceramics">
-        <a href="ceramics.html"><img src="img/crackle_crop.jpg" alt="a deep blue ceramic bowl with crackled sides" class="image">
-          <div class="overlay">
-            <div class="text"> | ceramics | </div>
+            <div class="text">thesis </div>
         </a>
       </div>
     </div>
 
 
-    <div class="col-md-4 container" id="paintings">
-      <a href="paintings.html"> <img src="img/painting_crop.jpg" alt="a mutli canvas painting in many colors with gold paper mâché" class="image">
+    <div class="col-md-4 container" id="codeEnforcement">
+      <a href="codeEnforcement.html"><img src="img/chris_crop.png" alt="a screenshot of a body of text with the City of Boston logo in the top right'" class="image">
         <div class="overlay">
-          <div class="text"> | paintings | </div>
+          <div class="text"> redesigning the UX of tickets</div>
+
       </a>
     </div>
+  </div>
+  <div class="col-md"></div>
+</div>
+
+
+
+  <div class="row">
+    <div class="col-md"></div>
+
+    <div class="col-md-4 container" id="openMRS">
+      <a href="openMRS.html"><img src="img/openMRSscreenshot_crop.png" alt="a screenshot of webpage which says 'OpenMRS'" class="image">
+        <div class="overlay">
+          <div class="text">opening open source</div>
+      </a>
+    </div>
+  </div>
+
+  <div class="col-md-4 container" id="photography">
+    <a href="photography.html"><img src="img/bridge_crop.jpg" alt="a black and white photo of a bridge" class="image">
+      <div class="overlay">
+        <div class="text">photography</div>
+    </a>
+  </div>
+  </div>
+  <div class="col-md"></div>
+  </div>
+
+  <div class="row ">
+    <div class="col-md"></div>
+    <div class="col-md-4 container" id="ceramics">
+      <a href="ceramics.html"><img src="img/crackle_crop.jpg" alt="a deep blue ceramic bowl with crackled sides" class="image">
+        <div class="overlay">
+          <div class="text">ceramics </div>
+      </a>
+    </div>
+  </div>
+
+
+  <div class="col-md-4 container" id="paintings">
+    <a href="paintings.html"> <img src="img/painting_crop.jpg" alt="a mutli canvas painting in many colors with gold paper mâché" class="image">
+      <div class="overlay">
+        <div class="text">paintings</div>
+    </a>
+  </div>
   </div>
   <div class="col-md"></div>
   </div>
   </div>
 
   <!--feather icons library-->
-<script>
-  feather.replace()
-</script>
+  <script>
+    feather.replace()
+  </script>
 
 
   <script src="js/jquery.min.js"></script>
