--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
     <div class="col-md-4 container" id="codeEnforcement">
-      <a href="codeEnforcement.html"><img src="img/chris_crop.png" alt="a screenshot of a body of text with the City of Boston logo in the top right'" class="image">
+      <a href="codeEnforcement.html"><img src="img/chris_crop.png" alt="a screenshot of a body of text with the City of Boston logo in the top right" class="image">
         <div class="overlay">
           <div class="text"> UX of ticketing</div>
 
