changed order of subwaypacman

--- a/subwayPacman.html
+++ b/subwayPacman.html
@@ -71,6 +71,19 @@
       <div class="col"></div>
     </div>
 
+    <div class="row description_section">
+      <div class="col"></div>
+      <div class="col-md-2">
+        <h3> Play </h3>
+      </div>
+      <div class="col-md-4">
+
+          <p> You can play with a live demo by opening the <a href="https://mysterious-ravine-74621.herokuapp.com/" target="_blank">gameboard</a> on your computer, and the <a href="https://sheltered-headland-71101.herokuapp.com" target="_blank">controller</a> on your phone.</p>
+
+      </div>
+      <div class="col"></div>
+    </div>
+
     <div class="row  description_section">
       <div class="col"></div>
       <div class="col-md-2">
@@ -79,7 +92,7 @@
       <div class="col-md-4">
 
           <p> We drew inspiration from the concept of <strong> sonder</strong>, "the realization that each random passerby is living a life as vivid and complex as your own". We wanted people to playfully engage with strangers around them, and focused on commute times as the perfect opportunity for brief interactions with a familiar game.</p>
-          <p> We redesigned the classic Pacman avatar to include more inclusive options. </p>
+          <p> We redesigned the classic Pacman avatar to be more inclusive options, and launched a proof of concept web app. </p>
       </div>
       <div class="col">
       </div>
@@ -88,7 +101,7 @@
     <div class="row  description_section">
       <div class="col"></div>
 
-      <div class="col-md-4">
+      <div class="col-md-5">
         <img src="img/pacpeople.png" class="body_images">
       </div>
       <div class="col"></div>
@@ -108,20 +121,6 @@
       <div class="col"></div>
     </div>
 
-
-
-    <div class="row description_section">
-      <div class="col"></div>
-      <div class="col-md-2">
-        <h3> Play </h3>
-      </div>
-      <div class="col-md-4">
-
-          <p> You can play with a live demo by opening the <a href="https://mysterious-ravine-74621.herokuapp.com/" target="_blank">gameboard</a> on your computer, and the <a href="https://sheltered-headland-71101.herokuapp.com" target="_blank">controller</a> on your phone.</p>
-
-      </div>
-      <div class="col"></div>
-    </div>
 
   </div>
 
