--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </a>
 
   <div class="container-fluid">
-    <div class="row">
+    <div class="row index_row">
       <div class="col-md"></div>
       <div class="col-md-4 container" id="thesis">
         <a href="https://automating.nyc"><img src="img/thesis_crop.png" alt="a screenshot of a body of text which says 'can I play with an algorithm'" class="image">
@@ -43,7 +43,7 @@
 
 
 
-  <div class="row">
+  <div class="row  index_row">
     <div class="col-md"></div>
 
     <div class="col-md-4 container" id="openMRS">
@@ -64,7 +64,7 @@
   <div class="col-md"></div>
   </div>
 
-  <div class="row ">
+  <div class="row  index_row rowbottom">
     <div class="col-md"></div>
     <div class="col-md-4 container" id="ceramics">
       <a href="ceramics.html"><img src="img/crackle_crop.jpg" alt="a deep blue ceramic bowl with crackled sides" class="image">
