--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="col-md-4 container" id="openMRS">
       <a href="openMRS.html"><img src="img/openMRSscreenshot_crop.png" alt="a screenshot of webpage which says 'OpenMRS'" class="image">
         <div class="overlay">
-          <div class="text">opening open source</div>
+          <div class="text">open source documentation</div>
       </a>
     </div>
   </div>
