--- a/openMRS.html
+++ b/openMRS.html
@@ -16,7 +16,7 @@
 <body>
 
   <div class="container-fluid">
-    <h1>| &nbsp Opening Open Source &nbsp |</h1>
+    <h1>| &nbsp Open Source Documentation &nbsp |</h1>
 
     <div class="row  description_section">
       <div class="col"></div>
