updated homepage for mobile

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="container-fluid">
     <div class="row index_row">
       <div class="col-md"></div>
-      <div class="col-md-4 container" id="thesis">
+      <div class="col-md-4 container mobile_column" id="thesis">
         <a href="https://automating.nyc"><img src="img/thesis_crop.png" alt="a screenshot of a body of text which says 'can I play with an algorithm'" class="image">
           <div class="overlay">
             <div class="text">thesis </div>
@@ -30,7 +30,7 @@
     </div>
 
 
-    <div class="col-md-4 container" id="codeEnforcement">
+    <div class="col-md-4 container mobile_column" id="codeEnforcement">
       <a href="codeEnforcement.html"><img src="img/chris_crop.png" alt="a screenshot of a body of text with the City of Boston logo in the top right" class="image">
         <div class="overlay">
           <div class="text"> UX of ticketing</div>
@@ -46,7 +46,7 @@
   <div class="row  index_row">
     <div class="col-md"></div>
 
-    <div class="col-md-4 container" id="openMRS">
+    <div class="col-md-4 container mobile_column" id="openMRS">
       <a href="openMRS.html"><img src="img/openMRSscreenshot_crop.png" alt="a screenshot of webpage which says 'OpenMRS'" class="image">
         <div class="overlay">
           <div class="text">open source documentation</div>
@@ -54,7 +54,7 @@
     </div>
   </div>
 
-  <div class="col-md-4 container" id="photography">
+  <div class="col-md-4 container mobile_column" id="photography">
     <a href="photography.html"><img src="img/bridge_crop.jpg" alt="a black and white photo of a bridge" class="image">
       <div class="overlay">
         <div class="text">photography</div>
@@ -66,7 +66,7 @@
 
   <div class="row  index_row rowbottom">
     <div class="col-md"></div>
-    <div class="col-md-4 container" id="ceramics">
+    <div class="col-md-4 container mobile_column" id="ceramics">
       <a href="ceramics.html"><img src="img/crackle_crop.jpg" alt="a deep blue ceramic bowl with crackled sides" class="image">
         <div class="overlay">
           <div class="text">ceramics </div>
@@ -75,7 +75,7 @@
   </div>
 
 
-  <div class="col-md-4 container" id="paintings">
+  <div class="col-md-4 container mobile_column" id="paintings">
     <a href="paintings.html"> <img src="img/painting_crop.jpg" alt="a mutli canvas painting in many colors with gold paper mâché" class="image">
       <div class="overlay">
         <div class="text">paintings</div>
