updated mobile width and code enforcement text

--- a/codeEnforcement.html
+++ b/codeEnforcement.html
@@ -16,7 +16,7 @@
 <body>
 
   <div class="container-fluid">
-    <h1>| &nbsp Redesigning the UX of Tickets &nbsp |</h1>
+    <h1>| &nbsp UX of Ticketing &nbsp |</h1>
 
     <div class="row  description_section">
       <div class="col"></div>
