added pacman images

--- a/subwayPacman.html
+++ b/subwayPacman.html
@@ -23,7 +23,7 @@
       <div class="col-md-6">
 
         <img src="img/pacman_gif.gif" class="header_image pacman">
-    
+
       </div>
       <div class="col"></div>
     </div>
@@ -37,7 +37,7 @@
 
           <p> Project for the course Designing for Desirability at the Harvard <a href="https://www.desirabilitylab.com/" target="_bank"> Desirability Lab</a>.</p>
 
-          <p> Presented at the 2019 Harvard Design Fair </p>
+          <p> Presented at the 2019 Harvard Design Fair. </p>
 
       </div>
       <div class="col"></div>
@@ -67,6 +67,15 @@
 
           <p> We created Subway Pacman for people to playfully engage with strangers on their commute. The Pacman gameboard displays on the digital advertising screens over the subway track. People join via a join link, select an inclusive avatar, and control their Pacperson from their phone. This rift on the classic game is collaborative and lighthearted. </p>
 
+      </div>
+      <div class="col"></div>
+    </div>
+
+    <div class="row  description_section">
+      <div class="col"></div>
+
+      <div class="col-md-5">
+        <img src="img/designfair.JPG" class="body_images_horizontal" alt="three young women smiling and holding their phones in front of a screen with the pacman boardgame">
       </div>
       <div class="col"></div>
     </div>
@@ -102,7 +111,7 @@
       <div class="col"></div>
 
       <div class="col-md-5">
-        <img src="img/pacpeople.png" class="body_images">
+        <img src="img/pacpeople.png" class="body_images" alt="a screenshot of a phone with four pacman characters, pacman, pacwoman, a pacperson with a rainbow hat, and a pacperson in a wheelchair">
       </div>
       <div class="col"></div>
     </div>
