added captions to pacman images

--- a/subwayPacman.html
+++ b/subwayPacman.html
@@ -76,6 +76,7 @@
 
       <div class="col-md-5">
         <img src="img/designfair.JPG" class="body_images_horizontal" alt="three young women smiling and holding their phones in front of a screen with the pacman boardgame">
+        <p class="image_caption">Participants enjoying a demo of the game at the Harvard Design Fair.</p>
       </div>
       <div class="col"></div>
     </div>
@@ -101,7 +102,7 @@
       <div class="col-md-4">
 
           <p> We drew inspiration from the concept of <strong> sonder</strong>, "the realization that each random passerby is living a life as vivid and complex as your own". We wanted people to playfully engage with strangers around them, and focused on commute times as the perfect opportunity for brief interactions with a familiar game.</p>
-          <p> We redesigned the classic Pacman avatar to be more inclusive options, and launched a proof of concept web app. </p>
+          <p> We redesigned the classic Pacman avatar to be more inclusive, and launched a proof of concept web app. </p>
       </div>
       <div class="col">
       </div>
@@ -112,6 +113,7 @@
 
       <div class="col-md-5">
         <img src="img/pacpeople.png" class="body_images" alt="a screenshot of a phone with four pacman characters, pacman, pacwoman, a pacperson with a rainbow hat, and a pacperson in a wheelchair">
+        <p class="image_caption">Wireframe of inclusive pacman characters.</p>
       </div>
       <div class="col"></div>
     </div>
