added captions to header images

--- a/codeEnforcement.html
+++ b/codeEnforcement.html
@@ -22,7 +22,7 @@
       <div class="col"></div>
       <div class="col-md-6">
         <a href="https://innovategovernment.org/boston-code-blog-2019" target="_blank">
-        <img src="img/chris.png" class="header_image">
+        <img src="img/chris.png" class="header_image" alt="a screenshot of an image that says 'meet Chris' and tells the story of Chris's fall on unshoveled snow.">
       </a>
       </div>
       <div class="col"></div>
