--- a/openMRS.html
+++ b/openMRS.html
@@ -22,7 +22,7 @@
       <div class="col"></div>
       <div class="col-md-6">
         <a href="http://devmanual.openmrs.org/en/" target="_blank">
-        <img src="img/openMRSscreenshot.PNG" class="header_image">
+        <img src="img/openMRSscreenshot.PNG" class="header_image" alt="a screenshot of a website that says 'Welcome to OpenMRS. Write code, save lives.'">
       </a>
       </div>
       <div class="col"></div>
