--- a/subwayPacman.html
+++ b/subwayPacman.html
@@ -22,7 +22,7 @@
       <div class="col"></div>
       <div class="col-md-6">
 
-        <img src="img/pacman_gif.gif" class="header_image pacman">
+        <img src="img/pacman_gif.gif" class="header_image pacman" alt="a gif of the pacman game board in the shape of a subway station. Three pacpeople are moving throughout.">
 
       </div>
       <div class="col"></div>
