updated MFM page

--- a/farmersMarket.html
+++ b/farmersMarket.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Mass Farmers Market</title>
+  <title>Mass Farmers Markets</title>
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Yrsa" rel="stylesheet">
@@ -16,7 +16,7 @@
 <body>
 
   <div class="container-fluid">
-    <h1>| &nbsp Massachusetts Farmers Market &nbsp |</h1>
+    <h1>| &nbsp Mass Farmers Markets &nbsp |</h1>
 
     <div class="row  description_section">
       <div class="col"></div>
@@ -73,7 +73,8 @@
       </div>
       <div class="col-md-4">
 
-          <p>This project  </p>
+          <p>This project was for the MIT course <a href="http://codeforgood.mit.edu/" target="_blank">Code for Good</a>. The class partners student teams with clients. Over three weeks in January 2019, we moved rapidly through conversations with our client, background research, lo fidelity prototyping, app development, and user testing.  </p>
+          <p>The project will be deployed on the new Mass Farmers Market website by the end of summer 2019.</p>
       </div>
       <div class="col"></div>
     </div>
