--- a/farmersMarket.html
+++ b/farmersMarket.html
@@ -47,7 +47,7 @@
       </div>
       <div class="col-md-4">
 
-          <p> How can we help people easily find farmers markets near them?</p>
+          <p> How can we help people easily find farmers markets near them with the services they need?</p>
 
       </div>
       <div class="col"></div>
