added pacman and mfm to index

--- a/farmersMarket.html
+++ b/farmersMarket.html
@@ -16,7 +16,7 @@
 <body>
 
   <div class="container-fluid">
-    <h1>| &nbsp Mass Farmers Markets &nbsp |</h1>
+    <h1>| &nbsp Mapping Farmers Markets &nbsp |</h1>
 
     <div class="row  description_section">
       <div class="col"></div>
