--- a/index.html
+++ b/index.html
@@ -39,7 +39,29 @@
     </div>
   </div>
   <div class="col-md"></div>
-</div>
+  </div>
+
+  <div class="row  index_row">
+    <div class="col-md"></div>
+
+    <div class="col-md-4 container mobile_column" id="openMRS">
+      <a href="subwayPacman.html"><img src="img/pacman_gif.gif" alt="a gif of the pacman game board in the shape of a subway station. Three pacpeople are moving throughout."
+ class="image">
+        <div class="overlay">
+          <div class="text">subway pacman</div>
+      </a>
+    </div>
+  </div>
+
+  <div class="col-md-4 container mobile_column" id="photography">
+    <a href="photography.html"><img src="img/MFM_crop.png" alt="a of a map of Massachusetts with several farmers markets highlighted" class="image">
+      <div class="overlay">
+        <div class="text">mapping farmers markets</div>
+    </a>
+  </div>
+  </div>
+  <div class="col-md"></div>
+  </div>
 
 
 
