updated mfm link

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </div>
 
   <div class="col-md-4 container mobile_column" id="photography">
-    <a href="photography.html"><img src="img/MFM_crop.png" alt="a of a map of Massachusetts with several farmers markets highlighted" class="image">
+    <a href="farmersMarket.html"><img src="img/MFM_crop.png" alt="a of a map of Massachusetts with several farmers markets highlighted" class="image">
       <div class="overlay">
         <div class="text">mapping farmers markets</div>
     </a>
