--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
       <div class="col-md-4 container mobile_column" id="thesis">
         <a href="https://automating.nyc"><img src="img/thesis_crop.png" alt="a screenshot of a body of text which says 'can I play with an algorithm'" class="image">
           <div class="overlay">
-            <div class="text">thesis </div>
+            <div class="text">thesis: automating NYC </div>
         </a>
       </div>
     </div>
 
 
     <div class="col-md-4 container mobile_column" id="codeEnforcement">
-      <a href="codeEnforcement.html"><img src="img/chris_crop.png" alt="a screenshot of a body of text with the City of Boston logo in the top right" class="image">
+      <a href="codeEnforcement.html"><img src="img/chris_index.png" alt="a screenshot of a body of text with the City of Boston logo in the top right" class="image">
         <div class="overlay">
           <div class="text"> UX of ticketing</div>
 
