updated border radius

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="col-md-4 container mobile_column" id="thesis">
         <a href="https://automating.nyc"><img src="img/thesis_crop.png" alt="a screenshot of a body of text which says 'can I play with an algorithm'" class="image">
           <div class="overlay">
-            <div class="text">thesis: automating NYC </div>
+            <div class="text">thesis<br>automating NYC </div>
         </a>
       </div>
     </div>
