added blog link to code enforcement

--- a/codeEnforcement.html
+++ b/codeEnforcement.html
@@ -78,6 +78,7 @@
           <p> <strong> User Research </strong> From January through March 2019 we did background research through data analysis, best practices in other cities, ride alongs with officers, and interviews/observations with users (Boston residents) interacting with Code Enforcement.  </p>
           <p> <strong> Prototyping </strong> In March through May, we brainstormed solutions and prototyped our 5 touchpoints. We created lo-fi versions of each idea and tested them in the real world, updating and improving each time. Some of the designs went through as many as 8 iterations and 58 user interviews.  </p>
           <p> In May we settled on our final versions and handed them off to the city where they'll be rolled out to over 600,000 Boston residents. </p>
+          <p> Learn more about our process <a href="https://innovategovernment.org/boston-code-blog-2019" target="_blank">here</a>.</p>
       </div>
       <div class="col"></div>
     </div>
