capitalized names on index

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="col-md-4 container mobile_column" id="thesis">
         <a href="https://automating.nyc"><img src="img/thesis_crop.png" alt="a screenshot of a body of text which says 'can I play with an algorithm'" class="image">
           <div class="overlay">
-            <div class="text">thesis:<br>automating NYC </div>
+            <div class="text">Thesis:<br>Automating NYC </div>
         </a>
       </div>
     </div>
@@ -33,7 +33,7 @@
     <div class="col-md-4 container mobile_column" id="codeEnforcement">
       <a href="codeEnforcement.html"><img src="img/chris_index.png" alt="a screenshot of a body of text with the City of Boston logo in the top right" class="image">
         <div class="overlay">
-          <div class="text"> UX of ticketing</div>
+          <div class="text"> UX of Ticketing</div>
 
       </a>
     </div>
@@ -48,7 +48,7 @@
       <a href="subwayPacman.html"><img src="img/pacman_gif.gif" alt="a gif of the pacman game board in the shape of a subway station. Three pacpeople are moving throughout."
  class="image">
         <div class="overlay">
-          <div class="text">subway pacman</div>
+          <div class="text">Subway Pacman</div>
       </a>
     </div>
   </div>
@@ -56,7 +56,7 @@
   <div class="col-md-4 container mobile_column" id="photography">
     <a href="farmersMarket.html"><img src="img/MFM_crop.png" alt="a of a map of Massachusetts with several farmers markets highlighted" class="image">
       <div class="overlay">
-        <div class="text">mapping farmers markets</div>
+        <div class="text">Mapping Farmers Markets</div>
     </a>
   </div>
   </div>
@@ -71,7 +71,7 @@
     <div class="col-md-4 container mobile_column" id="openMRS">
       <a href="openMRS.html"><img src="img/openMRSscreenshot_crop.png" alt="a screenshot of webpage which says 'OpenMRS'" class="image">
         <div class="overlay">
-          <div class="text">open source documentation</div>
+          <div class="text">Open Source Documentation</div>
       </a>
     </div>
   </div>
@@ -79,7 +79,7 @@
   <div class="col-md-4 container mobile_column" id="photography">
     <a href="photography.html"><img src="img/bridge_crop.jpg" alt="a black and white photo of a bridge" class="image">
       <div class="overlay">
-        <div class="text">photography</div>
+        <div class="text">Photography</div>
     </a>
   </div>
   </div>
@@ -91,7 +91,7 @@
     <div class="col-md-4 container mobile_column" id="ceramics">
       <a href="ceramics.html"><img src="img/crackle_crop.jpg" alt="a deep blue ceramic bowl with crackled sides" class="image">
         <div class="overlay">
-          <div class="text">ceramics </div>
+          <div class="text">Ceramics </div>
       </a>
     </div>
   </div>
@@ -100,7 +100,7 @@
   <div class="col-md-4 container mobile_column" id="paintings">
     <a href="paintings.html"> <img src="img/painting_crop.jpg" alt="a mutli canvas painting in many colors with gold paper mâché" class="image">
       <div class="overlay">
-        <div class="text">paintings</div>
+        <div class="text">Paintings</div>
     </a>
   </div>
   </div>
