updated art images

--- a/paintings.html
+++ b/paintings.html
@@ -22,21 +22,21 @@
 
 
       <div class="col-md-3 container" id="photography">
-        <img src="img/paintings/seaweed.jpg" alt="" class="image">
+        <img src="img/paintings/seaweed.jpg" alt="" class="art_image">
         <div class="overlay">
           <div class="text">seaweed</div>
         </div>
       </div>
 
       <div class="col-md-6 container" id="photography">
-        <img src="img/paintings/andromeda.jpg" alt="" class="image" width="600px">
+        <img src="img/paintings/andromeda.jpg" alt="" class="art_image" width="600px">
         <div class="overlay">
           <div class="text">andromeda</div>
         </div>
       </div>
 
       <div class="col-md-3 container" id="photography">
-        <img src="img/paintings/fire.JPG" alt="" class="image">
+        <img src="img/paintings/fire.JPG" alt="" class="art_image">
         <div class="overlay">
           <div class="text">pause</div>
         </div>
