--- a/ceramics.html
+++ b/ceramics.html
@@ -16,21 +16,21 @@
 <div class="container-fluid art_pages">
     <div class="row row1">
         <div class="col-md-4 container" id="photography">
-            <img src="img/ceramics/crackle.JPG" alt="" class="image" >
+            <img src="img/ceramics/crackle.JPG" alt="" class="art_image" >
             <div class="overlay">
                 <div class="text">    crackle   </div>
             </div>
         </div>
 
         <div class="col-md-4 container" id="photography">
-                <img src="img/ceramics/orchid.jpg" alt="" class="image" >
+                <img src="img/ceramics/orchid.jpg" alt="" class="art_image" >
                 <div class="overlay">
                     <div class="text">    orchid    </div>
                 </div>
             </div>
 
         <div class="col-md-4 container" id="photography">
-            <img src="img/ceramics/galaxy.JPG" alt="" class="image" >
+            <img src="img/ceramics/galaxy.JPG" alt="" class="art_image" >
             <div class="overlay">
                 <div class="text">    galaxy    </div>
             </div>
@@ -44,21 +44,21 @@
         <div class="row row2">
 
             <div class="col-md-4 container" id="photography">
-                <img src="img/ceramics/mug.jpg" alt="" class="image" >
+                <img src="img/ceramics/mug.jpg" alt="" class="art_image" >
                 <div class="overlay">
                     <div class="text">    triangle    </div>
                 </div>
             </div>
 
            <div class="col-md-4 container" id="photography">
-                <img src="img/ceramics/succulent.jpg" alt="" class="image" >
+                <img src="img/ceramics/succulent.jpg" alt="" class="art_image" >
                 <div class="overlay">
                     <div class="text">    succulent   </div>
                 </div>
             </div>
 
             <div class="col-md-4 container" id="photography">
-            <img src="img/ceramics/ramen.JPG" alt="" class="image" >
+            <img src="img/ceramics/ramen.JPG" alt="" class="art_image" >
             <div class="overlay">
                 <div class="text">    flecks    </div>
             </div>
@@ -71,14 +71,14 @@
         <div class="row rowbottom">
 
 <div class="col-md-4 container" id="photography">
-            <img src="img/ceramics/sediment.JPG" alt="" class="image" >
+            <img src="img/ceramics/sediment.JPG" alt="" class="art_image" >
             <div class="overlay">
                 <div class="text">    sediment   </div>
             </div>
         </div>
 
             <div class="col-md-4 container" id="photography">
-            <img src="img/ceramics/bubble.jpg" alt="" class="image" >
+            <img src="img/ceramics/bubble.jpg" alt="" class="art_image" >
             <div class="overlay">
                 <div class="text">    bubble    </div>
             </div>
@@ -86,7 +86,7 @@
 
 
         <div class="col-md-4 container" id="photography">
-            <img src="img/ceramics/pumpkin.JPG" alt="" class="image" >
+            <img src="img/ceramics/pumpkin.JPG" alt="" class="art_image" >
             <div class="overlay">
                 <div class="text">    pumpkin    </div>
             </div>
