--- a/photography.html
+++ b/photography.html
@@ -19,14 +19,14 @@
 
     <div class="row row4">
       <div class="col-md-6 container" id="photography">
-        <img src="img/photos/door.jpg" alt="an orange door with a black and white border" class="image">
+        <img src="img/photos/door.jpg" alt="an orange door with a black and white border" class="art_image">
         <div class="overlay">
           <div class="text">   accra   ghana   <br>   2012   </div>
         </div>
       </div>
 
       <div class="col-md-6 container" id="photography">
-        <img src="img/photos/wonderwheel.jpg" alt="a widescreen view of a carnival next to the ocean" class="image">
+        <img src="img/photos/wonderwheel.jpg" alt="a widescreen view of a carnival next to the ocean" class="art_image">
         <div class="overlay">
           <div class="text">   coney island   new york   <br>   2016   </div>
         </div>
@@ -39,21 +39,21 @@
     <div class="row row2">
 
       <div class="col-md-3 container" id="photography">
-        <img src="img/photos/tortie.jpg" alt="a tortoiseshell cat with a blue background" class="image">
+        <img src="img/photos/tortie.jpg" alt="a tortoiseshell cat with a blue background" class="art_image">
         <div class="overlay">
           <div class="text">   somerville   <br>   massachusetts   <br>   2016   </div>
         </div>
       </div>
 
       <div class="col-md-3 container" id="photography">
-        <img src="img/photos/man.jpg" alt="a black and white photo of a man standing in a rocky landscape" class="image">
+        <img src="img/photos/man.jpg" alt="a black and white photo of a man standing in a rocky landscape" class="art_image">
         <div class="overlay">
           <div class="text">   savai'i   <br>   samoa   <br>   2017   </div>
         </div>
       </div>
 
       <div class="col-md-3 container" id="photography">
-        <img src="img/photos/street.jpg" alt="a colorful street" class="image">
+        <img src="img/photos/street.jpg" alt="a colorful street" class="art_image">
         <div class="overlay">
           <div class="text">   toulouse   <br>   france   <br>   2018   </div>
         </div>
@@ -61,7 +61,7 @@
 
 
       <div class="col-md-3 container" id="photography">
-        <img src="img/photos/shoes.jpg" alt="a pair of shoes in the sand" class="image">
+        <img src="img/photos/shoes.jpg" alt="a pair of shoes in the sand" class="art_image">
         <div class="overlay">
           <div class="text">   monterey   <br>   california   <br>   2017   </div>
         </div>
@@ -70,14 +70,14 @@
 
       <div class="row row1">
         <div class="col-md-3 container" id="photography">
-          <img src="img/bridge_crop.jpg" alt="a black and white photo of a bridge" class="image">
+          <img src="img/bridge_crop.jpg" alt="a black and white photo of a bridge" class="art_image">
           <div class="overlay">
             <div class="text">   new orleans   <br>   louisiana   <br>   2016   </div>
           </div>
         </div>
 
         <div class="col-md-3 container" id="photography">
-          <img src="img/photos/candles.jpg" alt="set of candles in blue containers" class="image">
+          <img src="img/photos/candles.jpg" alt="set of candles in blue containers" class="art_image">
           <div class="overlay">
             <div class="text">   new hampshire   <br>   2017   </div>
           </div>
@@ -85,14 +85,14 @@
 
 
         <div class="col-md-3 container" id="photography">
-          <img src="img/photos/fan.jpg" alt="a blue fan reflected in the water" class="image">
+          <img src="img/photos/fan.jpg" alt="a blue fan reflected in the water" class="art_image">
           <div class="overlay">
             <div class="text">   new york   <br>   new york   <br>   2015   </div>
           </div>
         </div>
 
         <div class="col-md-3 container" id="photography">
-          <img src="img/photos/coffee.jpg" alt="a black and white picture of a coffee shop sign" class="image">
+          <img src="img/photos/coffee.jpg" alt="a black and white picture of a coffee shop sign" class="art_image">
           <div class="overlay">
             <div class="text">   new york   <br>   new york   <br>   2015   </div>
           </div>
@@ -100,21 +100,21 @@
 
         <div class="row row2">
           <div class="col-md-3 container" id="photography">
-            <img src="img/photos/waterdoor.jpg" alt="a door and its reflection in a canal" class="image">
+            <img src="img/photos/waterdoor.jpg" alt="a door and its reflection in a canal" class="art_image">
             <div class="overlay">
               <div class="text">   annecy   <br>   france   <br>   2013   </div>
             </div>
           </div>
 
           <div class="col-md-3 container" id="photography">
-            <img src="img/photos/graffitti.jpg" alt="an alleyway with brightly coloured graffiti" class="image">
+            <img src="img/photos/graffitti.jpg" alt="an alleyway with brightly coloured graffiti" class="art_image">
             <div class="overlay">
               <div class="text">   cambridge   <br>   massachusetts   <br>   2014   </div>
             </div>
           </div>
 
           <div class="col-md-3 container" id="photography">
-            <img src="img/photos/elephant2.jpg" alt="a yellow carving of an elephant" class="image">
+            <img src="img/photos/elephant2.jpg" alt="a yellow carving of an elephant" class="art_image">
             <div class="overlay">
               <div class="text">   jaipur   <br>   india   <br>   2012   </div>
             </div>
@@ -122,7 +122,7 @@
 
 
           <div class="col-md-3 container" id="photography">
-            <img src="img/photos/cat.jpg" alt="a cat sleeping on a blue stool" class="image">
+            <img src="img/photos/cat.jpg" alt="a cat sleeping on a blue stool" class="art_image">
             <div class="overlay">
               <div class="text">   punta mona   <br>   costa rica   <br>   2016   </div>
             </div>
@@ -131,7 +131,7 @@
           <div class="row rowbottom">
 
             <div class="col-md-6 container" id="photography">
-              <img src="img/photos/beach.JPG" alt="a widescreen stormy beach with a hut" class="image">
+              <img src="img/photos/beach.JPG" alt="a widescreen stormy beach with a hut" class="art_image">
               <div class="overlay">
                 <div class="text">   namua   samoa   <br>   2017   </div>
               </div>
@@ -139,7 +139,7 @@
 
 
             <div class="col-md-6 container" id="photography">
-              <img src="img/photos/decay.JPG" alt="a rusting piece of metal with the ocean in the background" class="image">
+              <img src="img/photos/decay.JPG" alt="a rusting piece of metal with the ocean in the background" class="art_image">
               <div class="overlay">
                 <div class="text">   san salvador   bahamas   <br>   2015   </div>
               </div>
