added thesis page to index

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  
+
   <title>Portfolio</title>
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -22,9 +22,9 @@
     <div class="row index_row">
       <div class="col-md"></div>
       <div class="col-md-4 container mobile_column" id="thesis">
-        <a href="https://automating.nyc"><img src="img/thesis_crop.png" alt="a screenshot of a body of text which says 'can I play with an algorithm'" class="image">
+        <a href="thesis.html"><img src="img/thesis_crop.png" alt="a screenshot of a body of text which says 'can I play with an algorithm'" class="image">
           <div class="overlay">
-            <div class="text">Thesis:<br>Automating NYC </div>
+            <div class="text">Automating NYC </div>
         </a>
       </div>
     </div>
