added photos to code enforcement

--- a/codeEnforcement.html
+++ b/codeEnforcement.html
@@ -64,6 +64,22 @@
 
           <p> We focused on the physical touchpoints the city has with Boston residents when they receive a ticket. We redesigned the envelope and ticket using behavioral insights and design principles, created an education insert, redesigned the past-due letter and created a follow up letter, and redesigned the website flow to focus on a unified landing page.</p>
 
+          <p> View our redesigns and learn more <a href="https://docs.google.com/presentation/d/1R65Id3vE1gXoAOUWcZtrBoNcPPRhXprmJlgyYh6MEFc/edit?usp=sharing" target="_blank">here</a>.</p>
+
+      </div>
+      <div class="col"></div>
+    </div>
+
+    <div class="row  description_section">
+      <div class="col"></div>
+
+      <div class="col-md-4">
+        <img src="img/originalenvelope.png" class="body_images_horizontal" alt="a green violation envelope">
+        <p class="image_caption">The original envelope.</p>
+      </div>
+      <div class="col-md-4">
+        <img src="img/newenvelope.png" class="body_images_horizontal" alt="a red violation envelope">
+        <p class="image_caption">The redesigned envelope.</p>
       </div>
       <div class="col"></div>
     </div>
