--- a/thesis.html
+++ b/thesis.html
@@ -22,7 +22,7 @@
       <div class="col"></div>
       <div class="col-md-6">
         <a href="https://automating.nyc/" target="_blank">
-        <img src="img/automatingNYC.gif" class="header_image" alt="a screenshot of the skyline of New York City with text that says 'Automating NYC and (en)coding inequality?'">
+        <img src="img/thesis.png" class="header_image" alt="a screenshot of the skyline of New York City with text that says 'Automating NYC and (en)coding inequality?'">
       </a>
       </div>
       <div class="col"></div>
