added press to thesis

--- a/thesis.html
+++ b/thesis.html
@@ -103,11 +103,26 @@
 
           <p>Aki Younge<br>
           Deepra Yusuf<br>
-          Jon Truong<br>
+          Jon Truong<br></p>
 
       </div>
       <div class="col"></div>
     </div>
+
+    <div class="row description_section">
+      <div class="col"></div>
+      <div class="col-md-2">
+        <h3> Press </h3>
+      </div>
+      <div class="col-md-4">
+
+          <p>  <a href="https://www.fastcompany.com/90351049/whats-an-algorithm-let-an-avocado-explain" target="_blank"><em>What’s an algorithm? Let an avocado explain.</em> Fast Company.</a>
+</p>
+
+      </div>
+      <div class="col"></div>
+    </div>
+
 
 
 
