updated links style

--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
       <div class="col-md-4 container mobile_column" id="thesis">
         <a href="thesis.html"><img src="img/thesis_crop.png" alt="a screenshot of a body of text which says 'can I play with an algorithm'" class="image">
           <div class="overlay">
-            <div class="text">Automating NYC </div>
+            <div class="text">Automating NYC
+            </div>
         </a>
+
       </div>
+
     </div>
 
 
