added tools to all projets

--- a/codeEnforcement.html
+++ b/codeEnforcement.html
@@ -102,6 +102,22 @@
     <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-2">
+        <h3> Tools </h3>
+      </div>
+      <div class="col-md-4">
+
+          <p> Inkscape <br>
+            Adobe Illustrator <br>
+            Tableau <br>
+          </p>
+
+      </div>
+      <div class="col"></div>
+    </div>
+
+    <div class="row description_section">
+      <div class="col"></div>
+      <div class="col-md-2">
         <h3> Team </h3>
       </div>
       <div class="col-md-4">
