--- a/farmersMarket.html
+++ b/farmersMarket.html
@@ -82,6 +82,23 @@
     <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-2">
+        <h3> Tools </h3>
+      </div>
+      <div class="col-md-4">
+
+          <p> JavaScript <br>
+            JQuery <br>
+            HTML + CSS <br>
+            R <br>
+          </p>
+
+      </div>
+      <div class="col"></div>
+    </div>
+
+    <div class="row description_section">
+      <div class="col"></div>
+      <div class="col-md-2">
         <h3> Team </h3>
       </div>
       <div class="col-md-4">
