--- a/subwayPacman.html
+++ b/subwayPacman.html
@@ -121,6 +121,23 @@
     <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-2">
+        <h3> Tools </h3>
+      </div>
+      <div class="col-md-4">
+
+          <p> JavaScript <br>
+            Figma <br>
+            InDesign <br>
+            InVision <br>
+          </p>
+
+      </div>
+      <div class="col"></div>
+    </div>
+
+    <div class="row description_section">
+      <div class="col"></div>
+      <div class="col-md-2">
         <h3> Team </h3>
       </div>
       <div class="col-md-4">
