--- a/thesis.html
+++ b/thesis.html
@@ -97,6 +97,26 @@
     <div class="row description_section">
       <div class="col"></div>
       <div class="col-md-2">
+        <h3> Tools </h3>
+      </div>
+      <div class="col-md-4">
+
+          <p> JavaScript <br>
+            JQuery <br>
+            D3.js <br>
+            HTML + CSS <br>
+            R <br>
+            Inkscape <br>
+            Adobe Illustrator <br>
+          </p>
+
+      </div>
+      <div class="col"></div>
+    </div>
+
+    <div class="row description_section">
+      <div class="col"></div>
+      <div class="col-md-2">
         <h3> Team </h3>
       </div>
       <div class="col-md-4">
@@ -108,6 +128,8 @@
       </div>
       <div class="col"></div>
     </div>
+
+
 
     <div class="row description_section">
       <div class="col"></div>
