--- a/about.html
+++ b/about.html
@@ -37,7 +37,11 @@
           As an undergraduate, I studied feminist theory, queer theory, and critical race theory and I approach all of my work through these lenses.
         </p>
 
-        <p> <a href="https://github.com/evoeges" target="_blank"><i data-feather="github"></i></a>&nbsp;&nbsp;&nbsp;
+        <p>
+          You can view my resume <a href= "img/ElyseVoegeliResumeMay2019.pdf">here</a>.
+        </p>
+
+        <p class="icon_link"> <a href="https://github.com/evoeges" target="_blank"><i data-feather="github"></i></a>&nbsp;&nbsp;&nbsp;
         <a href="https://www.linkedin.com/in/elyse-voegeli-037781124/" target="_blank"><i data-feather="linkedin"></i></a>
         &nbsp;&nbsp;&nbsp;
         <a href="https://twitter.com/evogues" target="_blank"><i data-feather="twitter"></i></a>
