added about link to mobile. updated about page

--- a/about.html
+++ b/about.html
@@ -26,15 +26,12 @@
       <div class="col-md-3"></div>
       <div class="col-md-6 about">
         <p>
-          I am a <strong> data analyst</strong> and <strong> designer </strong> pursuing a graduate degree in public policy at the Harvard Kennedy School.
-
-        </p>
+          I am a data analyst and designer committed to making to make tech accessible, accountable, and delightful.</p>
+          <p>I work at the intersection of tech and public policy, combining my years of research experience with a lifelong passion for visual art.</p>
+          <p> My work ranges from data visualization to mitigating algorithmic bias in machine learning to human-centered design in civic tech. </p>
         <p>
-        I'm committed to making tech accessible, accountable, and delightful.
-        </p>
+          I graduated from the Harvard Kennedy School in May 2019 with a Master in Public Policy. </p>
 
-        <p>
-          As an undergraduate, I studied feminist theory, queer theory, and critical race theory and I approach all of my work through these lenses.
         </p>
 
         <p>
