--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
     <div class="col-md"></div>
 
     <div class="col-md-4 container mobile_column" id="openMRS">
-      <a href="subwayPacman.html"><img src="img/pacman_gif.gif" alt="a gif of the pacman game board in the shape of a subway station. Three pacpeople are moving throughout."
- class="image">
+      <a href="subwayPacman.html"><img src="img/pacman_gif.gif" alt="a gif of the pacman game board in the shape of a subway station. Three pacpeople are moving throughout." class="image">
         <div class="overlay">
           <div class="text">Subway Pacman</div>
       </a>
@@ -109,6 +108,15 @@
   </div>
   <div class="col-md"></div>
   </div>
+
+  <div class="row  index_row">
+    <div class="col-md">
+      <a href="about.html">
+        <p class="small_link mobile_only">| &nbsp about &nbsp |</p>
+      </a>
+    </div>
+  </div>
+
   </div>
 
   <!--feather icons library-->
